Refactor scope management, logging, and error handling across services:
- Add enhanced logging for scope resolution, registration, and lifecycle operations.
- Introduce utilities for scope descriptions and service context reporting.
- Improve validation for propagated scope IDs, user sessions, and runtime dependencies.
- Add support for environment overrides in `LocalInstanceImpl` and synchronized access for OWL concepts.
- Refactor anonymous identity handling in service authentication and session management.
- Extend transaction propagation and observation contextualization in `ScopeManager`.